; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_visws_quirks.c_is_co_apic.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_visws_quirks.c_is_co_apic.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CO_APIC_CPU = common dso_local global i32 0, align 4
@CO_APIC_IDE1 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @is_co_apic to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_co_apic(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = call i64 @IS_CO_APIC(i32 %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load i32, i32* %3, align 4
  %9 = call i32 @CO_APIC(i32 %8)
  store i32 %9, i32* %2, align 4
  br label %19

10:                                               ; preds = %1
  %11 = load i32, i32* %3, align 4
  switch i32 %11, label %18 [
    i32 0, label %12
    i32 129, label %14
    i32 128, label %16
  ]

12:                                               ; preds = %10
  %13 = load i32, i32* @CO_APIC_CPU, align 4
  store i32 %13, i32* %2, align 4
  br label %19

14:                                               ; preds = %10
  %15 = call i32 (...) @co_apic_ide0_hack()
  store i32 %15, i32* %2, align 4
  br label %19

16:                                               ; preds = %10
  %17 = load i32, i32* @CO_APIC_IDE1, align 4
  store i32 %17, i32* %2, align 4
  br label %19

18:                                               ; preds = %10
  store i32 -1, i32* %2, align 4
  br label %19

19:                                               ; preds = %18, %16, %14, %12, %7
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i64 @IS_CO_APIC(i32) #1

declare dso_local i32 @CO_APIC(i32) #1

declare dso_local i32 @co_apic_ide0_hack(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
